Fix icon not centered in IE11

--- a/scss/components/_jwButtons.scss
+++ b/scss/components/_jwButtons.scss
@@ -39,6 +39,7 @@
     }
 
     .jwy-icon {
+        display: inline-block;
         vertical-align: middle;
     }
 }
